fix(datalist): fix border/blue left line overlap issue on hover

--- a/src/patternfly/components/DataList/data-list.scss
+++ b/src/patternfly/components/DataList/data-list.scss
@@ -15,15 +15,21 @@
   // Item
   --pf-c-data-list__item--m-expanded--before--BackgroundColor: var(--pf-global--active-color--100);
   --pf-c-data-list__item--m-selected--before--BackgroundColor: var(--pf-global--active-color--100);
-  --pf-c-data-list__item--m-selected--before--Top: calc(var(--pf-c-data-list__item-item--BorderTopWidth) * -1);
   --pf-c-data-list__item--m-selected--BoxShadow: var(--pf-global--BoxShadow--sm-top), var(--pf-global--BoxShadow--sm-bottom);
   --pf-c-data-list__item--m-selectable--hover--ZIndex: var(--pf-global--ZIndex--xs);
   --pf-c-data-list__item--m-selectable--hover--BoxShadow: var(--pf-global--BoxShadow--sm-top), var(--pf-global--BoxShadow--sm-bottom);
   --pf-c-data-list__item--m-expanded--m-selectable--before--BackgroundColor: var(--pf-global--active-color--300);
   --pf-c-data-list__item-item--BorderTopColor: var(--pf-global--BorderColor--100); // at breaking change switch var to BorderBottom
   --pf-c-data-list__item-item--BorderTopWidth: var(--pf-global--BorderWidth--sm); // at breaking change switch var to BorderBottom
+  --pf-c-data-list__item--hover--item--BorderTopColor: var(--pf-c-data-list__item-item--BorderTopColor);
+  --pf-c-data-list__item--hover--item--BorderTopWidth: var(--pf-c-data-list__item-item--BorderTopWidth);
   --pf-c-data-list__item-item--sm--BorderTopWidth: #{pf-size-prem(8px)}; // at breaking change switch var to BorderBottom
   --pf-c-data-list__item-item--sm--BorderTopColor: var(--pf-global--BorderColor--300); // at breaking change switch var to BorderBottom
+
+  @media screen and (max-width: $pf-global--breakpoint--sm) {
+    --pf-c-data-list__item-item--BorderTopWidth: var(--pf-c-data-list__item-item--sm--BorderTopWidth);
+    --pf-c-data-list__item-item--BorderTopColor: var(--pf-c-data-list__item-item--sm--BorderTopColor);
+  }
 
   // List item border left
   --pf-c-data-list__item--before--BackgroundColor: transparent;
@@ -101,6 +107,7 @@
   --pf-c-data-list__expandable-content--MarginLeft: calc(var(--pf-c-data-list__expandable-content-body--PaddingLeft) * -1);
   --pf-c-data-list__expandable-content--BoxShadow: var(--pf-global--BoxShadow--md-bottom);
   --pf-c-data-list__expandable-content--md--MaxHeight: #{pf-size-prem(600px)};
+  --pf-c-data-list__expandable-content--before--Top: calc(var(--pf-c-data-list__item-item--BorderTopWidth) * -1);
   --pf-c-data-list__item--m-expanded__expandable-content--BorderTopWidth: var(--pf-global--BorderWidth--sm);
   --pf-c-data-list__expandable-content-body--PaddingTop: var(--pf-global--spacer--lg);
   --pf-c-data-list__expandable-content-body--PaddingRight: var(--pf-global--spacer--lg);
@@ -131,17 +138,20 @@
   flex-direction: column;
   background-color: var(--pf-c-data-list--BackgroundColor);
 
+  @media (min-width: $pf-global--breakpoint--sm) {
+    --pf-c-data-list__item--before--Top: var(--pf-c-data-list__item-item--before--Top);
+  }
+
   // add border top to subsequent li's
   &:not(.pf-m-expanded) {
     border-bottom: var(--pf-c-data-list__item-item--BorderTopWidth) solid var(--pf-c-data-list__item-item--BorderTopColor);
 
-    @media screen and (max-width: $pf-global--breakpoint--sm) {
-      --pf-c-data-list__item-item--BorderTopWidth: var(--pf-c-data-list__item-item--sm--BorderTopWidth);
-      --pf-c-data-list__item-item--BorderTopColor: var(--pf-c-data-list__item-item--sm--BorderTopColor);
-    }
+    &:not(.pf-m-selected):not(:last-child).pf-m-selectable:hover {
+      --pf-c-data-list__item-item--BorderTopWidth: 0;
 
-    + .pf-c-data-list__item.pf-m-selected {
-      --pf-c-data-list__item--before--Top: var(--pf-c-data-list__item--m-selected--before--Top);
+      + .pf-c-data-list__item {
+        border-top: var(--pf-c-data-list__item--hover--item--BorderTopWidth) solid var(--pf-c-data-list__item--hover--item--BorderTopColor);
+      }
     }
   }
 
@@ -163,18 +173,10 @@
 
     position: relative;
     box-shadow: var(--pf-c-data-list__item--m-selected--BoxShadow);
-
-    &:not(.pf-m-expanded) {
-      --pf-c-data-list__item--before--Bottom: -1px;
-    }
   }
 
   &.pf-m-expanded {
     --pf-c-data-list__item--before--BackgroundColor: var(--pf-c-data-list__item--m-expanded--before--BackgroundColor);
-
-    @media screen and (min-width: $pf-global--breakpoint--sm) {
-      --pf-c-data-list__item--before--Top: var(--pf-c-data-list__item-item--before--Top);
-    }
 
     &.pf-m-selectable:not(.pf-m-selected) {
       --pf-c-data-list__item--before--BackgroundColor: var(--pf-c-data-list__item--m-expanded--m-selectable--before--BackgroundColor);
@@ -336,15 +338,11 @@
 
 // Expandable content
 .pf-c-data-list__expandable-content {
-  border-top: 0 solid var(--pf-c-data-list__expandable-content--BorderTopColor);
   box-shadow: var(--pf-c-data-list__expandable-content--BoxShadow);
-
-  .pf-c-data-list__item.pf-m-expanded & {
-    border-top-width: var(--pf-c-data-list__item--m-expanded__expandable-content--BorderTopWidth);
-  }
 
   .pf-c-data-list__expandable-content-body {
     padding: var(--pf-c-data-list__expandable-content-body--PaddingTop) var(--pf-c-data-list__expandable-content-body--PaddingRight) var(--pf-c-data-list__expandable-content-body--PaddingBottom) var(--pf-c-data-list__expandable-content-body--PaddingLeft);
+    border-top: var(--pf-c-data-list__item--m-expanded__expandable-content--BorderTopWidth) solid var(--pf-c-data-list__expandable-content--BorderTopColor);
 
     &.pf-m-no-padding {
       padding: 0;
